fix gaps between divs.

--- a/main website/style.css
+++ b/main website/style.css
@@ -89,8 +89,9 @@ p {
 }
 
 .container2 {
-  display: grid;
-  grid-gap: 30px;
+  display: inline;
+  margin-left: 30px;
+
 }
 
 @media screen and (min-width: 900px)
@@ -102,8 +103,8 @@ p {
 	}
 
   .container3 {
-    display: grid;
-    grid-gap: 30px;
+    display: inline;
+    margin-left: 30px;
   }
 
   img {
